--- a/app/src/main/res/layout/fragment_plat.xml
+++ b/app/src/main/res/layout/fragment_plat.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp">
 
         <TextView
             android:id="@+id/enregistrement_title"
@@ -86,7 +87,8 @@
                 android:id="@+id/dropdown_category_plat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/categorie_plat"/>
+                android:hint="@string/categorie_plat"
+                android:tag="1"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,7 +146,8 @@
                 android:id="@+id/dropdown_accompagnement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/categorie_accompagnement"/>
+                android:hint="@string/categorie_accompagnement"
+                android:tag="2"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -166,7 +169,8 @@
                 android:id="@+id/dropdown_viande"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/categorie_viande"/>
+                android:hint="@string/categorie_viande"
+                android:tag="3"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -273,6 +277,51 @@
                 android:inputType="numberDecimal"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/prix_plat_indication"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/guillotine_background"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/nature_extra_2"
+            android:text="@string/prix_plat"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/prix_plat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/prix_plat_indication"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="30dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:boxCornerRadiusTopStart="7dp"
+            app:endIconMode="clear_text"
+            app:boxStrokeColor="@color/guillotine_background"
+            app:hintTextColor="@color/guillotine_background"
+            app:errorEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prix_plat"
+                android:textColorHint="@color/guillotine_background"
+                android:inputType="numberDecimal"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/enregistrer_plat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/prix_plat"
+            android:layout_marginTop="20dp"
+            android:text="@string/boutton_enregistrer"
+            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"/>
 
     </RelativeLayout>
 
